--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -15,7 +15,7 @@
         <main>
             <h1>建立新帳號</h1>
             <p>有朋自遠方來，不亦樂乎?</p>
-            <p class="error"><%= message %></p>
+            <p class="error"><%= !!locals.message?message:'' %></p>
             <form action="/register" method="post">
                 <label for="email">個人電子郵件地址</label>
                 <input
@@ -24,7 +24,7 @@
                     name="email"
                     placeholder="請輸入您的電子郵件地址"
                     required
-                    value="<%= email %>"
+                    value="<%= !!locals.email?email:'' %>"
                 />
                 <label for="schoolEmail">校園電子郵件地址 (可選)</label>
                 <input
