--- a/src/views/issue.ejs
+++ b/src/views/issue.ejs
@@ -49,7 +49,7 @@
                 );
             }
             .reporting main {
-                filter: blur(10px) brightness(0.1) grayscale(.5);
+                filter: blur(10px) brightness(0.1) grayscale(0.5);
             }
 
             .report {
@@ -64,9 +64,11 @@
                 transform: translate(-50%, -50%);
                 border-radius: 2rem;
                 opacity: 0;
+                pointer-events: none;
             }
             .reporting .report {
                 opacity: 1;
+                pointer-events: all;
             }
             .pie-square {
                 display: inline-block;
@@ -160,7 +162,7 @@
             .school-status {
                 display: flex;
                 flex-wrap: wrap;
-                gap:2rem;
+                gap: 2rem;
             }
             .school-status > div {
                 flex: 1;
@@ -171,15 +173,35 @@
             .school-status span {
                 text-align: right;
             }
-            .school-status a {
-                display: flex;  
-                justify-content: space-between;
+            .school {
                 padding: 1rem;
                 border-radius: 0.375rem;
                 background-color: #f0f0f0;
                 margin-bottom: 0.5rem;
                 text-decoration: none;
-                color: #000;
+                color: #000000;
+                max-height: 3.21875rem;
+                overflow: hidden;
+                transition: all 0.5s ease-in-out;
+            }
+            .school > div {
+                opacity: 0.5;
+            }
+            .school > div.school-name {
+                opacity: 1;
+            }
+
+            .school:hover {
+                max-height: 500px;
+            }
+
+            .school > div {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 1rem;
+            }
+            .school > div:last-child {
+                margin-bottom: 0;
             }
         </style>
     </head>
@@ -240,20 +262,87 @@
             <section class="school-status">
                 <div>
                     <h2>已實施</h2>
-                    <a href="">市立某某高中 <span>✅</span></a
-                    ><a href="">市立某某高中 <span>✅</span></a
-                    ><a href="">市立某某高中 <span>✅</span></a>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>✅</span>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>✅</span>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>✅</span>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <h2>實驗階段</h2>
-                    <a href="">市立某某高中 <span>🟡</span></a
-                    ><a href="">市立某某高中 <span>🟡</span></a
-                    ><a href="">市立某某高中 <span>🟡</span></a>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>🟡</span>
+                        </div>
+                        <div>目前處於登記不懲除</div>
+                        <div>
+                            <div>成立</div>
+                            <div>2023/5/12 🟡</div>
+                        </div>
+                        <div>
+                            <div>成立</div>
+                            <div>2023/5/12 ❌</div>
+                        </div>
+                        <div>
+                            <div>成立</div>
+                            <div>2023/5/12 ❌</div>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>🟡</span>
+                        </div>
+                        <div>
+                            <div>成立</div>
+                            <div>2023/5/12</div>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>🟡</span>
+                        </div>
+                        <div>
+                            <div>成立</div>
+                            <div>2023/5/12</div>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>🟡</span>
+                        </div>
+                        <div>
+                            <div>成立</div>
+                            <div>2023/5/12</div>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <h2>未實施</h2>
-                    <a href="">市立某某高中 <span>❌</span></a><a href="">市立某某高中 <span>❌</span></a
-                    ><a href="">市立某某高中 <span>❌</span></a>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>❌</span>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>❌</span>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-name">
+                            市立某某高中 <span>❌</span>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
