--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -10,8 +10,6 @@
             main {
                 padding-top: 5rem;
                 transition: all 0.5s;
-            }
-            main {
                 margin-top: 0rem;
                 max-width: unset;
                 width: 100%;
@@ -23,6 +21,9 @@
                 border-radius: 1rem;
                 padding: 24px;
                 flex-grow: 1;
+            }
+            form{
+                max-width: 20rem;
             }
         </style>
     </head>
