--- a/src/views/news.ejs
+++ b/src/views/news.ejs
@@ -21,9 +21,9 @@
     </header>
     <main>
       <div class="box" id="tldr">
-        <input type="checkbox" id="toggle-tldr">
+        <input type="checkbox" id="toggle-tldr" />
         <label for="toggle-tldr">❯</label>
-        <h2>TLDR</h2>
+        <h2>TLDR</h2>   
         <p>
           這則新聞報導了新竹竹北高中班長集合制度引發的爭議。竹北高中要求每學期班長在午休時間參加會議，以傳達行政事務和發放通知。近期，一位高二班長呂同學因缺席一次會議而被記警告，呂同學認為這不符合比例原則，並提出申訴。
         </p>
