--- a/src/static/css/news.css
+++ b/src/static/css/news.css
@@ -28,8 +28,9 @@ main {
   margin: auto;
   padding: 2rem;
   padding-top: 0;
+  line-height: 1.3;
 }
-p {
+p ,section ul,section ol{
   margin-bottom: 1.5rem;
 }
 h2 {
@@ -48,9 +49,10 @@ h2 {
 }
 
 #tldr {
-  max-height: 3rem;
+  max-height: 4.4rem;
   overflow: hidden;
   position: relative;
+  margin-bottom: 2rem;
   /* transition: all 0.5s; */
 }
 
@@ -60,10 +62,26 @@ h2 {
 
 #tldr label {
   position: absolute;
-  right: 1rem;
-  top: 1rem;
+  right: 2rem;
+  top: 1.7rem;
   cursor: pointer;
+  transform: rotate(270deg);
+}
+
+#toggle-tldr:checked + label {
+  transform: rotate(90deg);
 }
 #tldr h2 {
   margin: 0;
+  margin-bottom: 24px;
+}
+
+section ol{
+    list-style-type: decimal;
+    margin-left: 2rem;
+}
+
+section ul{
+    list-style-type: disc;
+    margin-left: 2rem;
 }
