--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -7,15 +7,15 @@
                 <a href="/">學聲 EduVoice</a>
             </div>
             <ul>
-                <li><a href="https://eduvoice.emtech.cc/s/262">學校</a></li>
+                <li><a href="/s/262">學校</a></li>
                 <li>
-                    <a href="https://eduvoice.emtech.cc/i/58">規定</a>
+                    <a href="/i/58">規定</a>
                 </li>
                 <li>
-                    <a href="https://eduvoice.emtech.cc/#news">新聞</a>
+                    <a href="/#news">新聞</a>
                 </li>
                 <li>
-                    <a href="https://eduvoice.emtech.cc/#daily">日報</a>
+                    <a href="/#daily">日報</a>
                 </li>
             </ul>
         </div>
@@ -57,10 +57,10 @@
                 ></button>
             </form>
             <% if(loginStatus){ %>
-                <a class="login" href='https://eduvoice.emtech.cc/logout'>登出</a>
+                <a class="login" href='/logout'>登出</a>
                 
             <% }else { %>
-                <a class="login" href='https://eduvoice.emtech.cc/oauth'>登入</a>
+                <a class="login" href='/oauth'>登入</a>
             <% } %>
         </div>
     </div>
